...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="?android:attr/actionBarSize"
        android:backgroundTint="@color/colorAccent"
        android:clickable="true"
...
