<resources>
    <string name="app_name">AUSWP </string>
    <string name="home">Home</string>
    <string name="committee">Committee</string>
    <string name="events">Events</string>
    <string name="tracker">Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="AUSWP_logo">AUSWP Logo</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_help">Help</string>
    <string name="nav_open_drawer">Open</string>
    <string name="nav_close_drawer">Close</string>
    <string name="Welcome">The Official home of all things AUSWP</string>
    <string name="Next_Event">Next Event</string>
    <string name="water_polo_training">Water Polo Training</string>
    <string name="time">19:45-20:45</string>
    <string name="date">27/02/2021</string>
...
