...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.tracker.TrackerFragment">

    <View
        android:id="@+id/sets_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...
        app:layout_constraintBottom_toBottomOf="@+id/sets_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sets_view"
        app:layout_constraintVertical_bias="0.541" />

    <View
        android:id="@+id/tracker_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...
